5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1593_2426.log
== TEST (2019-03-26 10:51:54) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
quatidadede l = d/12
print(d,km)
ptint(quantidade,l)
-- ERROR:
File "XXXX", line 4
    quatidadede l = d/12
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:10) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
quatidade = d/12
print(d,km)
ptint(quantidade,l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d,km)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:37) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
quatidade = d/12
print(d)
ptint(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ptint(quantidade)
NameError: name 'ptint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:59) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
quatidade = d/12
print(d)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(quantidade)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:38) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
quatidade = d//12
print(d)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(quantidade)
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:10) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
l=(y*x)/12
print(d)
print(l)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:30) 
-- CODE:
x=float(input("tempo gasto: "))
y=float(input("velocidade media: "))
d=y*x
l=(y*x)/12
print(d)
print(l)
-- EXECUTION TIME:
0.192968
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:04) 
-- CODE:
x=float(input("tempo: "))
y=float(input("velocidade media: "))
d=y*x
l=(y*x)/12
print(d)
print(l)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
